--- a/Assignment1.html
+++ b/Assignment1.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Amal Baradia
+	File: Assignment1.html
+	Date: 26 January 2024
+	Marking up a raw file.
+	-->
+
 Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
