html file validated

--- a/Assignment1.html
+++ b/Assignment1.html
@@ -5,7 +5,11 @@
 	Marking up a raw file.
 	-->
 
-Dr. Eleanor Gaye
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+    Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
 Bobtown, CA 99999,
