--- a/Assignment1.html
+++ b/Assignment1.html
@@ -9,6 +9,36 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="author" content="Dr. Eleanor Gaye">
+    <title>Response to University Application</title>
+    <style>
+        /* Provided CSS Styles */
+        body {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .sender-column {
+            text-align: right;
+        }
+
+        h1 {
+            font-size: 1.5em;
+        }
+
+        h2 {
+            font-size: 1.3em;
+        }
+
+        p, ul, ol, dl, address {
+            font-size: 1.1em;
+        }
+
+        p, li, dd, dt, address {
+            line-height: 1.5;
+        }
+    </style>
+</head>
     Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
